--- a/app/views/tours/show.html.erb
+++ b/app/views/tours/show.html.erb
@@ -4,6 +4,7 @@
     <%= link_to 'Back to Tours', tours_path, :class => "btn btn-primary" %>
   </div>
 </div>
+
 <h3>Tour Info</h3>
 <div class="col-md-12">
   <div class="col-md-3">
@@ -48,16 +49,19 @@
           <p>Phone number: <%= tourguide.phone %></p>
           <p>Address: <%= tourguide.address %></p>
           <p>Gender: <%= tourguide.gender %></p>
+          <p>Device: <%= device_info(tourguide) %></p>
         </div>
         <div class="col-md-1 text-center">
           <button class="btn btn-danger cancel-tourguide" data-tourguide-id="<%= tourguide.id %>">Cancel</button>
         </div>
       </div>
+      <div class="clearfix"></div>
+      <hr>
     <% end %>
   <% end %>
 </div>
-<h3>Travelers</h3>
 
+<h3>Travelers</h3>
 <div class="col-md-12" id="data-travellers">
   <ul class="nav nav-tabs" role="tablist">
     <li role="presentation" class="active"><a href="#accepted" aria-controls="accepted" role="tab" data-toggle="tab">Accepted</a></li>
