--- a/app/views/tours/show.html.erb
+++ b/app/views/tours/show.html.erb
@@ -49,10 +49,10 @@
           <p>Phone number: <%= tourguide.phone %></p>
           <p>Address: <%= tourguide.address %></p>
           <p>Gender: <%= tourguide.gender %></p>
-          <p>Device: <%= device_info(tourguide) %></p>
+          <p>Device: <%= device_info(tourguide, @tour) %></p>
         </div>
         <div class="col-md-1 text-center">
-          <button class="btn btn-danger cancel-tourguide" data-tourguide-id="<%= tourguide.id %>">Cancel</button>
+          <button class="btn btn-danger cancel-tourguide" data-tourguide-id="<%= tourguide.id %>" data-tour-id="<%= @tour.id %>">Cancel</button>
         </div>
       </div>
       <div class="clearfix"></div>
