--- a/app/views/devices/show.html.erb
+++ b/app/views/devices/show.html.erb
@@ -1,5 +1,5 @@
 <h1>Device detail</h1>
 <p>Name: <strong><%= @device.name %></strong></p>
-<p>Status: <strong><%= @device.status %></strong></p>
+<p>Availabe: <strong><%= @device.availabe? %></strong></p>
 <p>Code: <strong><%= @device.code %></strong></p>
 
